[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/_reusable/reset/reset_button.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/reset_normal.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )
draw_center = false
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
draw_center = false

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
draw_center = false
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="name_reset" type="MarginContainer"]
modulate = Color( 1, 1, 1, 0.75 )
anchor_right = 0.038
anchor_bottom = 0.048
margin_right = -24.7
margin_bottom = -24.96
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="."]
margin_right = 25.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="draw" from="reset" to="." method="_on_reset_draw"]
[connection signal="hide" from="reset" to="." method="_on_reset_hide"]
[connection signal="mouse_entered" from="reset" to="." method="_on_reset_mouse_entered"]
[connection signal="mouse_exited" from="reset" to="." method="_on_reset_mouse_exited"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
